 (Format: Year/Month/Day)
Changes for 1.0rc3:
*07/01/07:
   * Fix RefCount crash and Slit deconstruction ordering (Simon)
     RefCount.hh Slit.hh/cc
   * Support per-window transparency settings.
      (Simon and thanks Julien Trolet, dmxen at sourceforge dot net)
       sf.net patch #1511042, feature #1108692
      - new "Transparency" menu in the window menu
      - new apps file attribute: 
         [alpha] {int int} (or just {int})
        Where numbers represent focused and unfocused transparency, 
        respectively. One number only will be used for both.
      - Also, show toggle status for shade and stick in window menu.
     fluxbox-nls.hh AlphaMenu.hh/cc BoolMenuItem.hh FbTk/Menu.hh 
     FbTk/MenuItem.hh FbTk/Resource.hh FbWinFrame.hh/cc IntResMenuItem.hh/cc
     MenuCreator.cc ObjectResource.hh Remember.hh/cc Screen.cc Slit.cc
     Window.hh/cc Toolbar.cc Makefile.am AlphaMenu.hh/cc ObjectResource.hh
*07/01/06:
   * Updated nb_NO translations (thanks emptydoor at users dot sf dot net)
     nls/nb_NO/Translation.m
   * Changing session.forcePseudotransparency no longer requires restart,
     also a little code cleanup in FbTk/Transparent.cc/hh
     (Mark)
     Slit.cc Menu.cc Toolbar.cc FbWinFrame.cc fluxbox.cc
   * Move triangle drawing into a generic function in FbDrawable (Simon)
     Make submenu triangles in MenuItems proportional to the icon size
     (alternate implementation of sf.net patch #1526813)
     FbTk/... FbDrawable.hh/cc MenuItem.cc
     ArrowButton.hh/cc WinButton.cc ToolFactory.cc
*07/01/05:
   * When a client in an unfocused tab creates a transient window, set that
     client to the active tab (Mark)
     Window.cc
   * Window wasn't staying focused when dragging across workspaces with
     outline window moving (Mark)
     Window.cc
   * Fix placement of window menu with toolbar at the top of the screen,
     and remove titlebar from window menu (Mark)
     Window.cc IconButton.cc